--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
